// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List component should match snapshot 1`] = `
<div>
  <div
    class="css-wi38yi-List"
  >
    <ul
      class="css-6tzczf-List"
    >
      <li
        class="css-aa4yut"
      >
        <div
          class="css-1s3pmdg-Text"
        >
          one
        </div>
      </li>
      <li
        class="css-aa4yut"
      >
        <div
          class="css-1s3pmdg-Text"
        >
          two
        </div>
      </li>
      <li
        class="css-aa4yut"
      >
        <div
          class="css-1s3pmdg-Text"
        >
          three
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`List component should match snapshot with custom props 1`] = `
<div>
  <div
    class="css-wi38yi-List"
  >
    <div
      class="css-1x18leo-Text"
    >
      test
    </div>
    <ol
      class="css-6tzczf-List"
    >
      <li
        class="css-1uq5q45"
      >
        <button
          class="css-1hmfsve-Button"
          type="button"
        >
          <span>
            one
          </span>
        </button>
      </li>
      <li
        class="css-aa4yut"
      >
        <button
          class="css-1hmfsve-Button"
          type="button"
        >
          <span>
            two
          </span>
        </button>
      </li>
      <li
        class="css-aa4yut"
      >
        <button
          class="css-1hmfsve-Button"
          type="button"
        >
          <span>
            three
          </span>
        </button>
      </li>
    </ol>
  </div>
</div>
`;
